--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                     <div class="company-logos">
                         <img src="/assets/Amazon_logo.svg" alt="Amazon" />
                         <img src="/assets/hashedin-logo.svg" alt="HashedIn" />
+                        <img src="/assets/epam.png" alt="EPAM" />
                     </div>
                     <p class="and-more">and more</p>
                 </div>
